# verilog-coding-template

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.hud  README.md  env.py  local_test.py  pyproject.toml  remote_test.py  tasks.py
grading/: __init__.py  graders.py  runner.py  spec.py
src/hud_controller/: app.py  grading_runner.py  spec.py
src/hud_controller/problems/: basic.py
tasks/: __init__.py  basic.py
tests/: conftest.py  test_grading.py
tools/: __init__.py
utils/: imagectl3.py
