[project]
name = "verilog-coding-env"
version = "0.1.0"
description = "Verilog coding environment for hud evaluations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.3.0",
    "mcp[cli]>=1.10.1",
    "pillow",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "pymongo",
    "anthropic>=0.87.0",
    "jsonschema>=4.21.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "imageio>=2.31.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "packaging>=21.0",
    "defusedxml>=0.7.1",
    "hud-python[agents]>=0.5.17",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff>=0.11.2", "pre-commit>=3.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hud]
image = "verilog-coding-template:dev"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tools", "grading"]
