[project]
name = "verilog-coding-env"
version = "0.1.0"
description = "Verilog coding environment for hud evaluations"
readme = "README.md"
# v6 SDK caps Python at <3.13; without this uv may pick 3.13 and fail to resolve.
requires-python = ">=3.11,<3.13"
dependencies = [
    "hud-python[agents]>=0.6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The env is two flat top-level modules (env.py, tasks.py), not a package dir.
[tool.hatch.build.targets.wheel]
only-include = ["env.py", "tasks.py"]
sources = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
